[package]
authors = ["Jacob Payne <info@latrasis.com>"]
description = "A rust implementation of the open pixel control protocol"
keywords = ["openpixel"]
license = "MIT"
name = "opc"
readme = "README.md"
repository = "https://github.com/latrasis/opc-rs"
version = "0.2.0"

[dependencies]
byteorder = "0.5.3"
tokio-core = "0.1.4"

[dev-dependencies]
rand = "0.3.14"
futures = "0.1.11"
