[package]
authors = ["Jacob Payne <info@latrasis.com>"]
description = "A rust implementation of the open pixel control protocol"
keywords = ["openpixel"]
license = "MIT"
name = "opc"
readme = "README.md"
repository = "https://github.com/latrasis/opc-rs"
version = "0.3.0"
documentation = "https://docs.rs/opc"

[dependencies]
tokio-io = "0.1.2"
bytes = "0.4"

[dev-dependencies]
rand = "0.3.14"
futures = "0.1.14"
tokio-core = "0.1.8"
